; ModuleID = '/home/carl/AnghaBench/libuv/src/extr_uv-common.c_uv_ip4_addr.c'
source_filename = "/home/carl/AnghaBench/libuv/src/extr_uv-common.c_uv_ip4_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { i32, %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i32 }

@AF_INET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_ip4_addr(i8* %0, i32 %1, %struct.sockaddr_in* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.sockaddr_in*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.sockaddr_in* %2, %struct.sockaddr_in** %6, align 8
  %7 = load %struct.sockaddr_in*, %struct.sockaddr_in** %6, align 8
  %8 = call i32 @memset(%struct.sockaddr_in* %7, i32 0, i32 16)
  %9 = load i32, i32* @AF_INET, align 4
  %10 = load %struct.sockaddr_in*, %struct.sockaddr_in** %6, align 8
  %11 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %10, i32 0, i32 3
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @htons(i32 %12)
  %14 = load %struct.sockaddr_in*, %struct.sockaddr_in** %6, align 8
  %15 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %14, i32 0, i32 2
  store i32 %13, i32* %15, align 4
  %16 = load i32, i32* @AF_INET, align 4
  %17 = load i8*, i8** %4, align 8
  %18 = load %struct.sockaddr_in*, %struct.sockaddr_in** %6, align 8
  %19 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %18, i32 0, i32 1
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = call i32 @uv_inet_pton(i32 %16, i8* %17, i32* %20)
  ret i32 %21
}

declare dso_local i32 @memset(%struct.sockaddr_in*, i32, i32) #1

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @uv_inet_pton(i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
